styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Lato;
}

/* HEADER */

header {
  background-color: rgba(229, 84, 115, 0.1);
}

.banner {
  max-width: 1440px;
  margin: auto;
  padding-top: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.banner-title {
  width: 50%;
}

.banner-title h1 {
  color: rgb(39, 39, 39);
  font-size: 5rem;
  font-weight: 800;
  line-height: 96px;
}

.banner-title p {
  color: rgba(39, 39, 39, 0.6);
  font-size: 1.12rem;
  font-weight: 400;
  line-height: 30px;
  padding: 32px 0px;
}

.banner-title button {
  color: rgb(255, 255, 255);
  font-size: 1.25rem;
  font-weight: 700;
  border: none;
  border-radius: 8px;
  background: rgb(229, 84, 115);
  padding: 10px 15px;
}

.banner-img {
  width: 50%;
}

.banner-img img {
  width: 100%;
}

/* FEATURE */

.feature {
  max-width: 1440px;
  margin: 180px auto 128px;
  text-align: center;
}

.feature h2 {
  color: rgb(39, 39, 39);
  font-size: 2.5rem;
  font-weight: 800;
}

.feature p {
  color: rgba(39, 39, 39, 0.6);
  font-size: 1.12rem;
  font-weight: 400;
  line-height: 30px;
  padding: 25px 30%;
}

.feature-cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 24px;
}

.feature-card {
  height: 605px;
  border-top-left-radius: 300px;
  border-top-right-radius: 300px;
  position: relative;
  margin-bottom: 30px;
}

.feature-card img {
  position: absolute;
  bottom: 0px;
  right: 10%;
}

#feature-img-2 img {
  bottom: 30px;
}

#feature-img-1 {
  background-color: rgba(167, 33, 98, 0.15);
}

#feature-img-2 {
  background-color: rgba(5, 151, 160, 0.15);
}

#feature-img-3 {
  background-color: rgba(71, 125, 17, 0.15);
}

.card a {
  color: rgb(39, 39, 39);
  font-size: 24px;
  font-weight: 700;
}

/* TESTIMONIAL */
.testimonial {
  max-width: 1440px;
  margin: auto;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 128px;
  padding: 85px 0px;
  border-radius: 8px;
  background: rgba(39, 39, 39, 0.05);
}

.card-1 {
  text-align: center;
}

.card-1 h4 {
  padding-top: 25px;
}

/* HOT DEALS */
.hot-deals {
  width: 1440px;
  margin: auto;
  background-color: rgba(229, 84, 115, 0.05);
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 40px 0px;
}

.hot-deal-title {
  width: 50%;
}

.hot-deal-title h1 {
  font-family: Lato;
  font-size: 40px;
  font-weight: 800;
}

.hot-off {
  color: rgb(229, 84, 115);
}

.hot-deal-title p {
  padding: 20px 12%;
  color: rgba(39, 39, 39, 0.6);
  font-family: Lato;
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
}

.hot-deal-img {
  width: 50%;
}

.hot-deal-img img {
  width: 318px;
}

.hot-deals button {
  font-size: 20px;
  font-weight: 700;
  color: #fff;
  background-color: rgb(229, 84, 115);
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
}

/* INSTAGRAM */
.instagram {
  width: 1440px;
  margin: 128px auto;
  text-align: center;
}

.instagram h1 {
  color: rgb(39, 39, 39);
  font-family: Lato;
  font-size: 40px;
  font-weight: 800;
  padding-bottom: 20px;
}

.instagram p {
  color: rgba(39, 39, 39, 0.6);
  font-family: Lato;
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
  padding: 0px 30% 48px;
}

.instagram-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
}

.instagram-card img {
  width: 100%;
}

/* LATEST DEAL */
.latest-deal {
  background-image: url("../images/Rectangle.png");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1440px;
  margin: 0px auto 128px;
  text-align: center;
  padding: 122px 0px;
  border-radius: 16px;
}

.latest-deal h1 {
  color: rgb(39, 39, 39);
  font-family: Lato;
  font-size: 40px;
  font-weight: 800;
  padding-bottom: 16px;
}

.latest-deal p {
  color: rgba(39, 39, 39, 0.6);
  font-family: Lato;
  font-size: 18px;
  font-weight: 400;
  padding-bottom: 48px;
}
.input {
  display: flex;
  justify-content: center;
  align-items: center;
}
.latest-deal input {
  color: rgba(39, 39, 39, 0.6);
  font-family: Lato;
  font-size: 16px;
  font-weight: 400;
  border: none;
  border-radius: 8px;
  padding: 15px 20% 15px 20px;
  background: rgb(255, 255, 255);
}

.latest-deal button {
  font-family: Lato;
  font-size: 20px;
  font-weight: 700;
  border: none;
  border-radius: 8px;
  padding: 13px 30px;
  color: #fff;
  background: rgb(229, 84, 115);
  margin-left: 16px;
}

/* FOOTER */
footer {
  text-align: center;
  background-color: rgb(17, 16, 16);
  padding: 128px 0px;
}

footer h1 {
  font-family: Lato;
  font-size: 48px;
  font-weight: 800;
  color: #fff;
  padding-bottom: 24px;
}

.flower {
  color: rgb(229, 84, 115);
}

footer p {
  color: rgba(255, 255, 255, 0.9);
  font-family: Lato;
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
  padding: 0px 30%;
}

footer h5 {
  color: rgba(255, 255, 255, 0.4);
  font-family: Lato;
  font-size: 16px;
  font-weight: 400;
  padding-top: 34px;
}

/* RESPONSIVE LAYOUT */
@media screen and (max-width: 576px) {
  .banner {
    flex-direction: column;
  }

  .banner-title {
    width: 100%;
  }

  .banner-title h1 {
    padding: 0px 20px;
  }

  .banner-title p {
    padding: 20px;
  }

  .banner-title button {
    margin-left: 20px;
  }

  .banner-img {
    width: 100%;
  }

  .feature-cards {
    grid-template-columns: repeat(1, 1fr);
    padding: 0px 10%;
  }

  #feature-img-2 img {
    right: -15px;
  }

  .feature p {
    padding: 25px 10%;
  }

  .testimonial {
    flex-direction: column;
    gap: 50px;
    padding: 30px 0px;
  }

  .hot-deals {
    width: 100%;
    flex-direction: column;
    gap: 30px;
    overflow: hidden;
  }

  .hot-deal-title {
    width: 100%;
  }

  .hot-deal-title p {
    padding: 20px;
  }

  .hot-deal-img {
    width: 100%;
  }

  .hot-deal-img img {
    width: 320px;
  }

  .instagram {
    width: 100%;
  }

  .instagram p {
    padding: 20px;
  }

  .instagram-container {
    grid-template-columns: repeat(1, 1fr);
  }

  .instagram-card {
    width: 100%;
  }

  .instagram-card img {
    width: 318px;
  }

  .latest-deal {
    width: 100%;
  }

  .input {
    flex-direction: column;
    gap: 30px;
  }

  footer p {
    padding: 0px 20px;
  }
}

